--- a/DFT_free_energy_structures/Description
+++ b/DFT_free_energy_structures/Description
@@ -1,3 +1,5 @@
-`<solvent>_<intermdediate>.vasp`: Relaxed structure of `<intermediate>` in explicit `<solvent>` environment on Au (100) surface obtained using QE
+`<solvent>_t<intermdediate>.vasp`: Relaxed structure of `<intermediate>` in explicit `<solvent>` environment on Au (100) surface obtained using QE
 
-Note: For just water `<solvent>`, Li was not included in DFT calculations (benchmark calculations)
+Note: t described state of intermediate, i.e., t = p (physisorbed), c (chemisorbed), a (adsorbed), and d (desorbed)
+
+Note: For `<solvent>` = water, Li was not included in DFT calculations (benchmark calculations)
